--- a/WordCounter/Views/WordCounter/Index.cshtml
+++ b/WordCounter/Views/WordCounter/Index.cshtml
@@ -16,6 +16,7 @@
     <h5>Shall we Begin?</p>
     <form action="/WordCounter/CreateForm">
       <button type="submit" class="btn btn-success">Begin!</button>
+    </form>
     </div>
   </div>
 </body>
