--- a/WordCounter/Views/WordCounter/Result.cshtml
+++ b/WordCounter/Views/WordCounter/Result.cshtml
@@ -5,5 +5,17 @@
 </head>
 <body>
   <div class="container">
+    <h1>Success!<h1>
+    <h6>In the sentance @Model.GetMultpleWords()</h6>
+    <h6>The word @Model.GetSingleWord()</h6>
+    <h6>Was repeated @Model.WordRepeatCounter() time(s)</p>
+
+    <form action="/WordCounter/CreateForm">
+      <button type="submit" class="btn btn-success">Play Again</button>
+    </form>
+
+    <form action="/">
+      <button type="submit" class="btn btn-success">Home</button>
+    </form>
   </div>
 </body>
