Add styling with css.

--- a/WordCounter/Views/WordCounter/Result.cshtml
+++ b/WordCounter/Views/WordCounter/Result.cshtml
@@ -1,14 +1,14 @@
 <head>
     <title>Hopkin's Game Corner</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 </head>
 <body>
   <div class="container">
     <h1>Success!<h1>
-    <h6>In the sentance @Model.GetMultpleWords()</h6>
-    <h6>The word @Model.GetSingleWord()</h6>
-    <h6>Was repeated @Model.WordRepeatCounter() time(s)</p>
+    <h5>In the sentance @Model.GetMultpleWords()</h5>
+    <h5>The word @Model.GetSingleWord()</h5>
+    <h5>Was repeated @Model.WordRepeatCounter() time(s)
 
     <form action="/WordCounter/CreateForm">
       <button type="submit" class="btn btn-success">Play Again</button>
