--- a/WordCounter/Views/WordCounter/Index.cshtml
+++ b/WordCounter/Views/WordCounter/Index.cshtml
@@ -1,7 +1,7 @@
 <head>
     <title>Hopkin's Game Corner</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" type="text/css" href="~/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
   <div class="container">
