Add further styling, and test the controllers.

--- a/WordCounter/Views/Home/Index.cshtml
+++ b/WordCounter/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
     <h1>Welcome to Hopkin's Game Corner!</h1>
     <h3>Choose a game you would like to play</h3>
     <ul>
-      <li><a href="/WordCounter">Word Counter</a></li>
-      <li>Sport Fishin' (Under Construction)</li>
-      <li>Black Jack (Under Construction)</li>
-      <li>Virtual Pet (Under Construction)</li>
+      <li><a href="/WordCounter">Word Counter <img src="~/img/open.png"></a></li>
+      <li>Sport Fishin'<img src="~/img/construction.png"></li>
+      <li>Black Jack<img src="~/img/construction.png"></li>
+      <li>Virtual Pet<img src="~/img/construction.png"></li>
     </ul>
   </div>
 </body>
