--- a/WordCounter/Views/WordCounter/CreateForm.cshtml
+++ b/WordCounter/Views/WordCounter/CreateForm.cshtml
@@ -9,10 +9,10 @@
     <div class="well">
       <form action="/WordCounter/Result" method="post">
         <label for="manywords">Enter a sentance to scan.</label>
-        <input id="manywords" name="manywords" type="text" class="form-control">
+        <input id="manywords" name="manywords" type="text" class="form-control" required>
         <label for="singleword">Enter word to scan for.</label>
-        <input id="singleword" name="singleword" type="text" class="form-control">
-        <button type="submit" class="btn btn-success">Play!</button>
+        <input id="singleword" name="singleword" type="text" class="form-control" required>
+        <h5><button type="submit" class="btn btn-success">Play!</button></h5>
       </form>
     </div>
   </div>
