Add views for Scrabble Score feature in program.

--- a/GameCorner/Views/Home/Index.cshtml
+++ b/GameCorner/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <h3>Choose a game you would like to play</h3>
     <ul>
       <li><a href="/WordCounter">Word Counter <img src="~/img/open.png"></a></li>
+      <li><a href="/ScrabbleScore">Scrabble Score <img src="~/img/open.png"></a></li>
       <li>Sport Fishin'<img src="~/img/construction.png"></li>
       <li>Black Jack<img src="~/img/construction.png"></li>
       <li>Virtual Pet<img src="~/img/construction.png"></li>
