--- a/GameCorner/Views/WordCounter/Result.cshtml
+++ b/GameCorner/Views/WordCounter/Result.cshtml
@@ -1,5 +1,5 @@
 <head>
-    <title>Hopkin's Game Corner</title>
+    <title>Word Counter</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 </head>
