--- a/GameCorner/Views/WordCounter/Index.cshtml
+++ b/GameCorner/Views/WordCounter/Index.cshtml
@@ -4,6 +4,20 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
+
+  <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <a class="navbar-brand" href="/">Hopkin's Game Corner</a>
+          </div>
+          <ul class="nav navbar-nav">
+              <li><a href="/">Home</a></li>
+              <li class="active"><a href="/WordCounter">Word Counter</a></li>
+              <li><a href="/ScrabbleScore">Scrabble Score</a></li>
+          </ul>
+      </div>
+  </nav>
+  
   <div class="container">
     <h1>Welcome to Word Counter!</h1>
     <h3>Please read the instructions, and then click the button to begin</h3>
